[package]
name = "rlibpcap"
version = "0.1.100"
edition = "2021"
authors = ["DrBrad <brad@bradeagle.com>"]
description = "PCAP library for rust"
license = "MIT"
repository = "https://github.com/ethernaught/rlibpcap"
readme = "README.md"
keywords = ["pcap", "packet", "capture"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
#[cfg(target_os = "windows")]
#winapi = { version = "0.3.9", features = ["winsock2", "ws2tcpip", "winnt", "iphlpapi"] }

[lib]
name = "rlibpcap"
path = "src/lib.rs"
